--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ nav>.menu>.logo>a{
     font-size: 40px;
     font-weight: bolder;
     color: white;
+    margin-left: 100px;
 }
 
 nav>.menu>ul{
@@ -42,6 +43,7 @@ nav>.menu>ul>li>a{
     text-decoration: none;
     font-size: 20px;
     font-weight: bold;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     padding: 8px 15px;
     color: white;
     border-radius: 5px;
@@ -51,3 +53,12 @@ nav>.menu>ul>li>a:hover{
     background-color: white;
     color: black;
 }
+
+.photo{
+    width: 100%;
+    height: 90vh;
+    background-image: url("camera.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
