--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ nav>.menu>.logo>a{
     font-size: 40px;
     font-weight: bolder;
     color: white;
-    margin-left: 100px;
 }
 
 nav>.menu>ul{
@@ -47,6 +46,7 @@ nav>.menu>ul>li>a{
     padding: 8px 15px;
     color: white;
     border-radius: 5px;
+    transition: 0.4s;
 }
 
 nav>.menu>ul>li>a:hover{
@@ -56,9 +56,54 @@ nav>.menu>ul>li>a:hover{
 
 .photo{
     width: 100%;
-    height: 90vh;
+    height: 92vh;
     background-image: url("camera.jpg");
     background-size: cover;
     background-position: center;
+    position: relative;
 }
 
+.mid-frame{
+    width: 100%;
+    height: 300px;
+    position: absolute;
+    top: 20%;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.mid-frame>.text{
+    font-size: 70px;
+    color: white;
+    font-weight: 800;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.mid-frame>.buttons{
+    width: 100%;
+    height: 100px;
+    padding: 50px 0;
+}
+
+.mid-frame>.buttons>button{
+    width: 150px;
+    height: 50px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: bolder;
+    cursor: pointer;
+    border: 2px solid white;
+    border-radius: 8px;
+    margin: 0 40px;
+}
+
+.mid-frame>.buttons>.btn1{
+    color: white;
+    background: none;
+    transition: 0.4s;
+}
+
+.mid-frame>.buttons>.btn1:hover{
+    color: black;
+    background-color: white;
+}
